# ftdi

./: .travis.yml  ftdi.cabal  test.hs
System/FTDI/: Internal.hs  MPSSE.hs  Properties.hs  Utils.hs
System/FTDI/Utils/: Properties.hs
